[package]
name = "bluper"
version = "0.1.0"
edition = "2024"

[dependencies]
ble-peripheral-rust = { git = "https://github.com/Tiggilyboo/ble-peripheral-rust" }
anyhow = "1.0"
tokio = "1.48"
uuid = "1.18"
winit = "0.30"
softbuffer = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[features]
# Optional cross-platform battery via `battery` crate (off by default)
# Enable with: cargo run --features battery-crate
battery-crate = []
